@@ -1,3 +1,12 @@
+		CHANGES IN corrplot VERSION 0.XX
+
+CHANGES
+  * Add customizable rectangles to correlation plots in corrRect().(#185, inspired by @douglaswhitaker thanks)
+  * Add `xName`, `yName` two columns in `corrPos` data frame(e.g. corrplot(...)$corrPos)
+
+
+
+
 		CHANGES IN corrplot VERSION 0.89
 
 CHANGES
